# Home_Monitoring

./: .gitignore  README.md
DataReceiver/: MQTT_RCV.py  main.py
DataSender/: platformio.ini
DataSender/src/: main.cpp
Telebot/: Bot.py  CMakeLists.txt  Makefile  main.py
Telebot/include/: Common.hpp  Database.hpp  MyBot.hpp
Telebot/py/: Database.py  main.py
Telebot/src/: Database.cpp  MyBot.cpp  main.cpp
WebSite/: WebSite.js  package.json
WebSite/App/Routes/LivingRoom/: instantData.js
WebSite/Public/css/: style.css
WebSite/Public/ejs/LivingRoom/: graph.ejs  instantData.ejs
WebSite/Public/html/: index.html
WebSite/Public/js/: chart.js
